--- a/_posts/2019-07-14-the-us-narrative-today.html
+++ b/_posts/2019-07-14-the-us-narrative-today.html
@@ -870,107 +870,107 @@ stories:
   domain: http://www.ddtonline.com/
   link: https://www.ddtonline.com/education/delta-state-awards-local-educators
 images:
-- name: supreme-court-supremecourt-monet-one.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/supreme-court-supremecourt-monet-one.jpg
-- name: oldroad-old-road-crunch-paper.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldroad-old-road-crunch-paper.jpg
-- name: beach-rocks-beach-rocks-currents-crunch-paper.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/beach-rocks-beach-rocks-currents-crunch-paper.jpg
-- name: old-door-lock-old-door-lock-2-sand-paper.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-door-lock-old-door-lock-2-sand-paper.jpg
-- name: beach-clouds-lifeguard-beachclouds-purple-pond.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/beach-clouds-lifeguard-beachclouds-purple-pond.jpg
-- name: losangelescloudyday-los-angeles-downtown-close-up-2.png
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/losangelescloudyday-los-angeles-downtown-close-up-2.png
-- name: san-francisco-skyline-night-san-francisco-skyline-night-horiz-circuit.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/san-francisco-skyline-night-san-francisco-skyline-night-horiz-circuit.jpg
-- name: hollywood-building-hollywood-building-colored-circuits.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/hollywood-building-hollywood-building-colored-circuits.jpg
-- name: container-ship-van-gogh-van-gogh-starry-night-container-bridge-2.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/container-ship-van-gogh-van-gogh-starry-night-container-bridge-2.jpg
-- name: oldhousecars-house-old-cars-post-modern.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldhousecars-house-old-cars-post-modern.jpg
-- name: downtown-los-angeles-downtown-la-ww2-dresden.JPG
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/downtown-los-angeles-downtown-la-ww2-dresden.JPG
-- name: los-angeles-from-observatory-losangeles-from-observatory-yellow-paper.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/los-angeles-from-observatory-losangeles-from-observatory-yellow-paper.jpg
-- name: fence-mexico-atari-asteroids.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/fence-mexico-atari-asteroids.jpg
-- name: castle-wall-DSC-0067-colorful-dream.JPG
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/castle-wall-DSC-0067-colorful-dream.JPG
-- name: san-francisco-city-bridge-sf-city-bridge-dali-two.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/san-francisco-city-bridge-sf-city-bridge-dali-two.jpg
-- name: power-lines-power-lines-empty-space-blue-electricity.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/power-lines-power-lines-empty-space-blue-electricity.jpg
-- name: pigeons-on-the-ledge-pigeons-on-ledge-mucha-mult.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/pigeons-on-the-ledge-pigeons-on-ledge-mucha-mult.jpg
-- name: school-clouds-church-clouds-really-hot.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/school-clouds-church-clouds-really-hot.jpg
-- name: windowmountain-window-mountain-atari-missle.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/windowmountain-window-mountain-atari-missle.jpg
-- name: dragon-desert-desert-dragon-copper-circuit.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/dragon-desert-desert-dragon-copper-circuit.jpg
-- name: crypto-machine-bletchley-crypto-machine-bletchley-colorful-dream.png
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/crypto-machine-bletchley-crypto-machine-bletchley-colorful-dream.png
-- name: crow-crow-cinnamon-rolls.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/crow-crow-cinnamon-rolls.jpg
-- name: downtheline-downtheline-blue-granite.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/downtheline-downtheline-blue-granite.jpg
-- name: eduardo-eduardo-plentiful.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/eduardo-eduardo-plentiful.jpg
-- name: art-museum-art-museum-blue-brush.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/art-museum-art-museum-blue-brush.jpg
-- name: school-clouds-church-clouds-colorful-dream.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/school-clouds-church-clouds-colorful-dream.jpg
-- name: white-house-lawn-white-house-window-graham-sutherland.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/white-house-lawn-white-house-window-graham-sutherland.jpg
-- name: old-house-oldhouse-wols.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-house-oldhouse-wols.jpg
-- name: downtown-los-angeles-downtown-la-colorful-blocks.JPG
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/downtown-los-angeles-downtown-la-colorful-blocks.JPG
-- name: dragon-desert-desert-dragon-kandinsky-bv.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/dragon-desert-desert-dragon-kandinsky-bv.jpg
-- name: udnie-IMG_6328.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/udnie-IMG_6328.jpg
-- name: white-house-lawn-white-house-window-pablo-blue.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/white-house-lawn-white-house-window-pablo-blue.jpg
-- name: subway-subway-satan-red.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/subway-subway-satan-red.jpg
-- name: legal-statue-legalstatue-sand-paper.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/legal-statue-legalstatue-sand-paper.jpg
-- name: old-door-lock-old-door-lock-ww2-dresden.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-door-lock-old-door-lock-ww2-dresden.jpg
-- name: bordercrossing-bordercrossing-plentiful.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/bordercrossing-bordercrossing-plentiful.jpg
-- name: curtain-curtain-blue-granite.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/curtain-curtain-blue-granite.jpg
-- name: bluelake-blue-brush-file-00-00-38-67.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/bluelake-blue-brush-file-00-00-38-67.jpg
-- name: meadowbutterfly-meadow-butterfly-crabapple.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/meadowbutterfly-meadow-butterfly-crabapple.jpg
-- name: oldhouse-oldhouse-purple-pond.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldhouse-oldhouse-purple-pond.jpg
-- name: hollywood-building-hollywood-building-atari-missle.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/hollywood-building-hollywood-building-atari-missle.jpg
-- name: mistywoods-babyfoot-dali-two.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/mistywoods-babyfoot-dali-two.jpg
-- name: bluelake-bright-sand-file-00-01-17-38.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/bluelake-bright-sand-file-00-01-17-38.jpg
-- name: oldtrain-oldtrain-propaganda-leaflets.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldtrain-oldtrain-propaganda-leaflets.jpg
-- name: ellis-island-ellisisland-really-hot.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/ellis-island-ellisisland-really-hot.jpg
-- name: soldier-kneeling-26304845730-d4e495e25f-o-dark-soul.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/soldier-kneeling-26304845730-d4e495e25f-o-dark-soul.jpg
-- name: white-house-lawn-white-house-window-dali-three.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/white-house-lawn-white-house-window-dali-three.jpg
-- name: server-cloud-server-racks-clouds-gred-mash.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/server-cloud-server-racks-clouds-gred-mash.jpg
-- name: lost-angeles-downtown-freeway-los-angeles-downtow-freeway-oily-mcoilface.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/lost-angeles-downtown-freeway-los-angeles-downtow-freeway-oily-mcoilface.jpg
-- name: old-granary-field-granaryfield-purp-paper.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-granary-field-granaryfield-purp-paper.jpg
-- name: paris-paris-hot-spicy.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/paris-paris-hot-spicy.jpg
+- name: power-lines-power-lines-empty-space-crafty-painting.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/power-lines-power-lines-empty-space-crafty-painting.jpg
+- name: old-granary-field-oldhouse-purp-paper.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-granary-field-oldhouse-purp-paper.jpg
+- name: statue-of-liberty-front-view-statueofliberty-copper-circuit.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/statue-of-liberty-front-view-statueofliberty-copper-circuit.jpg
+- name: meadowbutterfly-meadow-butterfly-purple-pond.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/meadowbutterfly-meadow-butterfly-purple-pond.jpg
+- name: statue-of-liberty-front-view-statueofliberty-blue-circuit.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/statue-of-liberty-front-view-statueofliberty-blue-circuit.jpg
+- name: oldsmallboat-oldsmallboat-far-away.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldsmallboat-oldsmallboat-far-away.jpg
+- name: server-cloud-server-racks-clouds-yellow-collage.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/server-cloud-server-racks-clouds-yellow-collage.jpg
+- name: nazi-invasion-DSC_0048.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/nazi-invasion-DSC_0048.jpg
+- name: christianity-christianity-under-construction-bright-sand.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/christianity-christianity-under-construction-bright-sand.jpg
+- name: crypto-machine-bletchley-crypto-machine-bletchley-blue-circuit-3.png
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/crypto-machine-bletchley-crypto-machine-bletchley-blue-circuit-3.png
+- name: power-lines-power-lines-empty-space-graham-sutherland.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/power-lines-power-lines-empty-space-graham-sutherland.jpg
+- name: san-francisco-street-view-san-francisco-street-view-free-woman.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/san-francisco-street-view-san-francisco-street-view-free-woman.jpg
+- name: razorcliff-razorcliff-clean-view.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/razorcliff-razorcliff-clean-view.jpg
+- name: blossombar-sunday-file-00-00-00-00.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/blossombar-sunday-file-00-00-00-00.jpg
+- name: oldtrain-oldtrain-kand-two.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldtrain-oldtrain-kand-two.jpg
+- name: catacombs-catacombs-copper-circuit.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/catacombs-catacombs-copper-circuit.jpg
+- name: old-door-lock-old-door-lock-2-copper-circuit-2.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-door-lock-old-door-lock-2-copper-circuit-2.jpg
+- name: stories-losangeles-from-observatory-free-woman.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/stories-losangeles-from-observatory-free-woman.jpg
+- name: school-clouds-church-clouds-colorful-blocks.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/school-clouds-church-clouds-colorful-blocks.jpg
+- name: docks-docks-ww2-color.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/docks-docks-ww2-color.jpg
+- name: ellis-island-ellisisland-blue-brush.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/ellis-island-ellisisland-blue-brush.jpg
+- name: aws-s3-stories-ellisisland-blue-circuit.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/aws-s3-stories-ellisisland-blue-circuit.jpg
+- name: school-clouds-church-clouds-feed-people.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/school-clouds-church-clouds-feed-people.jpg
+- name: death-valley-death-valley-national-park-gred-mash.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/death-valley-death-valley-national-park-gred-mash.jpg
+- name: windowmountain-window-mountain-yellow-collage.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/windowmountain-window-mountain-yellow-collage.jpg
+- name: server-cloud-server-racks-door-internet-numbers.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/server-cloud-server-racks-door-internet-numbers.jpg
+- name: san-francisco-street-view-san-francisco-street-view-atari-asteroids.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/san-francisco-street-view-san-francisco-street-view-atari-asteroids.jpg
+- name: carry-load-carryload-kandinsky-bv.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/carry-load-carryload-kandinsky-bv.jpg
+- name: downtown-los-angeles-downtown-la-feed-people.JPG
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/downtown-los-angeles-downtown-la-feed-people.JPG
+- name: statue-of-liberty-front-view-statueofliberty-constitution.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/statue-of-liberty-front-view-statueofliberty-constitution.jpg
+- name: los-angeles-from-observatory-losangeles-from-observatory-emily-carr.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/los-angeles-from-observatory-losangeles-from-observatory-emily-carr.jpg
+- name: castle-on-hill-castle-on-hill-edinburgh-crafty-painting.JPG
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/castle-on-hill-castle-on-hill-edinburgh-crafty-painting.JPG
+- name: bluelake-clean-view-file-00-00-38-67.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/bluelake-clean-view-file-00-00-38-67.jpg
+- name: old-church-oldchurch-gan-vogh.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-church-oldchurch-gan-vogh.jpg
+- name: redondo-beach-harbor-redondo-beach-harbor-emily-carr.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/redondo-beach-harbor-redondo-beach-harbor-emily-carr.jpg
+- name: sand-hand-sand-hand-clean-view.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/sand-hand-sand-hand-clean-view.jpg
+- name: server-cloud-server-racks-door-feed-people.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/server-cloud-server-racks-door-feed-people.jpg
+- name: soldiers-talking-34536952486-52cd6bb1d1-h-blue-circuit-4.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/soldiers-talking-34536952486-52cd6bb1d1-h-blue-circuit-4.jpg
+- name: old-church-oldchurch-umberto-bocc.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-church-oldchurch-umberto-bocc.jpg
+- name: oldhousecars-house-old-cars-pablo-blue.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldhousecars-house-old-cars-pablo-blue.jpg
+- name: oldcabin-oldcabin-dark-soul.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldcabin-oldcabin-dark-soul.jpg
+- name: old-school-house-old-schoolhouse-horiz-circuit.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-school-house-old-schoolhouse-horiz-circuit.jpg
+- name: white-house-whitehouse-clean-view.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/white-house-whitehouse-clean-view.jpg
+- name: downtown-fredericksburg-downtown-fredericksburg-dali-three.JPG
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/downtown-fredericksburg-downtown-fredericksburg-dali-three.JPG
+- name: soldier-kneeling-26304845730-d4e495e25f-o-colored-circuits.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/soldier-kneeling-26304845730-d4e495e25f-o-colored-circuits.jpg
+- name: rockingchair-rockingchair-ww2-dresden.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/rockingchair-rockingchair-ww2-dresden.jpg
+- name: old-house-oldhouse-really-hot.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-house-oldhouse-really-hot.jpg
+- name: downtown-trucksilo-wols.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/downtown-trucksilo-wols.jpg
+- name: locked-up-steam-lock-up-steam-cinnamon-rolls.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/locked-up-steam-lock-up-steam-cinnamon-rolls.jpg
+- name: downtown-trucksilo-mucha-mult.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/downtown-trucksilo-mucha-mult.jpg
+- name: amusement-park-amusement-park-2-satan-red.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/amusement-park-amusement-park-2-satan-red.jpg
 ---
 They Saved The World.&nbsp;Snohomish Announces Movies In The Park Lineup.&nbsp;Detained Journalist To Be Released On Bond.&nbsp;Jennifer Lopez Emotional As Her Concert Was Evacuated.&nbsp;Bat Cats Rally Past Mulvane Patriots.&nbsp;Citys Big Sam Effort Recognized.&nbsp;Illinois Health Department Warns People About Tetanus During Flood Clean Up.&nbsp;Glasgow Preschool Academy Hosts Summer Program.&nbsp;
